--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Mainmenu" android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".OrdersActivity"></activity>
+        <activity android:name=".NotPaidOrders"></activity>
+        <activity android:name=".ProcessingOrders" />
+        <activity
+            android:name=".Mainmenu"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".OrdersActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
