--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NotPaidOrders"></activity>
+        <activity android:name=".NewInvoiceActivity"></activity>
+        <activity android:name=".NotPaidOrders" />
         <activity android:name=".ProcessingOrders" />
         <activity
             android:name=".Mainmenu"
