--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.fiek.projektiioc"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.3.1'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
