--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.firebaseui:firebase-ui-firestore:4.3.1'
+//    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+//    implementation 'com.google.firebase:firebase-database:19.2.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
