--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-messaging:20.2.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
