--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".Invoice_details"></activity>
         <activity android:name=".MyInvoiceActivity" />
         <activity android:name=".NewInvoiceActivity" />
+        <activity android:name=".NewOrdersActivity"></activity>
         <activity android:name=".NotPaidOrders" />
         <activity android:name=".ProcessingOrders" />
         <activity
