--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.fiek.projektiioc">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,15 +11,19 @@
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@drawable/appicon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Invoice_details"></activity>
+        android:theme="@style/AppTheme"
+        tools:targetApi="m">
+        <activity android:name=".newProducts"></activity>
+        <activity android:name=".Invoice_details" />
         <activity android:name=".MyInvoiceActivity" />
         <activity android:name=".NewInvoiceActivity" />
-        <activity android:name=".NewOrdersActivity"></activity>
+        <activity android:name=".NewOrdersActivity" />
         <activity android:name=".NotPaidOrders" />
         <activity android:name=".ProcessingOrders" />
         <activity
