--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.fiek.projektiioc" >
+    package="com.fiek.projektiioc">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -17,9 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:targetApi="m" >
-        <activity android:name=".All_InvoicesActivity" >
-        </activity>
+        tools:targetApi="m">
+        <activity android:name=".LlogariaA"></activity>
+        <activity android:name=".All_InvoicesActivity"></activity>
         <activity android:name=".newProducts" />
         <activity android:name=".Invoice_details" />
         <activity android:name=".MyInvoiceActivity" />
@@ -33,8 +33,8 @@
         <activity android:name=".OrdersActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".MyOrders"/>
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MyOrders" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,7 +50,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
